fix overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -1344,7 +1344,7 @@ p {
   position: absolute;
   top: 0;
   left: 0;
-  width: auto;
+  width: 100%;
   height: 294px;
   display: flex;
   align-items: center;
