--- a/sass/layouts/_projects.scss
+++ b/sass/layouts/_projects.scss
@@ -70,7 +70,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: auto;
+  width: 100%;
   height: 294px;
   display: flex;
   align-items: center;
